Fix bug on mobile safari

--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,12 @@ body {
 
 }
 
+@supports (-webkit-touch-callout: none) {
+  body {
+    height: -webkit-fill-available;
+  }
+}
+
 canvas {
   max-width: 100%;
   max-height: 100%;
